# rme-control-gui

./: .gitignore  README.md  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alsa_control.rs  alsa_util.rs  audio_control.rs  main.rs  pipewire_control.rs  pipewire_profile.rs
src-tauri/src/alsa/: controller.rs  general.rs  input_gain.rs  mod.rs  routing.rs  sends.rs  switches.rs  volume.rs
src-tauri/src/pipewire/: buffer_size.rs  controller.rs  general.rs  mod.rs  profile.rs  volume.rs
src-tauri/src/storage/: config.rs  controller.rs  mod.rs
src-tauri/src/usb/: babyface_interface.rs  babyface_pro.rs  babyface_pro_old.rs  controller.rs  controller_old.rs  get_device.rs  mod.rs  test.rs
src/assets/: base.css
src/components/: AudioControls.vue  AudioSettings.vue  Channel.vue  ChannelInput.vue  ChannelInputControls.vue  ChannelInputLabel.vue  ChannelInputStereo.vue  ChannelInputSwitches.vue  ChannelInputVolume.vue  ChannelInputs.vue  ChannelOutputs.vue  Fader.vue  FaderThumb.vue  Greet.vue  Knob.vue  Mixer.vue  MonitorControl.vue  MonitorControls.vue  PlaybackControl.vue  ProfileSwitch.vue
src/config/: alsa-config.yml  alsaConfig.ts  channelsConfig.ts  loadAlsaConfig.ts  pipewireConfig.ts  soundCardConfig.ts
src/plugins/: RmePlugin.ts
src/services/: MqttService.ts  RmeService.ts
src/store/: babyfaceStore.ts
src/stores/: rmeStore.ts
src/types/: alsaConfig.types.ts  alsaOutput.types.ts  config.types.ts  mqtt.types.ts  rme.types.ts  rmePlugin.types.ts  (+2 more)
(+7 files in other folders)
