[package]
name = "rme-babyface-control"
version = "1.1.2"
description = "RME Babyface Gui"
authors = ["Stefan Stistrup"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.5"
once_cell = "1.19.0"
lazy_static = "1.5.0"
pipewire = "0.8.0"
rusb = "0.9.4"
nix = "0.29.0"
